--- a/index.html
+++ b/index.html
@@ -4,10 +4,102 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Rouge Vs Bleu</title>
   </head>
   <body>
-    <div id="app"></div>
+    <svg style="display: none">
+      <symbol
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        id="action"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+        />
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M9 9.563C9 9.252 9.252 9 9.563 9h4.874c.311 0 .563.252.563.563v4.874c0 .311-.252.563-.563.563H9.564A.562.562 0 019 14.437V9.564z"
+        />
+      </symbol>
+    </svg>
+    <div class="player">
+      <div class="score">56</div>
+      <div class="cursor">
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+      </div>
+    </div>
+    <div class="video"></div>
+    <div class="player">
+      <div class="score">56</div>
+      <div class="cursor">
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+        <svg>
+          <use href="#action"></use>
+        </svg>
+      </div>
+    </div>
+    <div class="round">2</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
