--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </symbol>
     </svg>
     <div class="player">
-      <div class="score">56</div>
+      <div class="score">0</div>
       <div class="cursor">
         <svg>
           <use href="#action"></use>
@@ -63,9 +63,12 @@
         </svg>
       </div>
     </div>
-    <div class="video"></div>
+    <div class="video">
+      <div class="videoWrapper"></div>
+      <div class="videoWrapper"></div>
+    </div>
     <div class="player">
-      <div class="score">56</div>
+      <div class="score">0</div>
       <div class="cursor">
         <svg>
           <use href="#action"></use>
@@ -99,7 +102,8 @@
         </svg>
       </div>
     </div>
-    <div class="round">2</div>
+    <div class="round">1/3</div>
+    <output></output>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
